--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header {
     flex-direction: row;
     justify-content: space-evenly;
     height: 50px;
+    margin-bottom: 50px;
 }
 
 .bank-logo {
@@ -34,6 +35,7 @@ header {
 }
 
 .top-ref {
+    margin-left: -10px;
     padding-top: 15px;
     display: flex;
     flex-direction: row;
@@ -228,4 +230,16 @@ h1 {
 
 .currency-for-one {
     margin-top: 25px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
